--- a/categoria.html
+++ b/categoria.html
@@ -7,7 +7,7 @@
     </head>
     <body>
      
-        <nav class="bg-gradient-to-r from-indigo-600 to-gray-900 ">
+        <nav class="bg-gradient-to-r from-sky-600 to-blue-900 ">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
               <div class="flex h-16 items-center justify-between">
                 <div class="flex items-center">
@@ -71,7 +71,7 @@
                     </div>
                   </div>
                   <div class="p-2 w-full">
-                    <button onclick="postCategoria()" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Crear Categoria</button>
+                    <button onclick="postCategoria()" class="flex mx-auto text-white bg-sky-700 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Crear Categoria</button>
                   </div>
                  
                 </div>
