--- a/machine.html
+++ b/machine.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script type="text/javascript" src="js/funcionesMachine.js"></script>  
+        <script type="text/javascript" src="js/funcionesMachine.js"></script>
+        <script src="https://cdn.tailwindcss.com"></script>   
 
     </head>
     <body>
@@ -15,6 +16,8 @@
             <li><a href="reservaciones.html">Reservaciones</a></li>
             <li><a href="reportes.html">Reportes</a></li>
         </ul>
+
+        
 
         <script type="text/javascript">
             window.onload = getMachine();
